December 23, 2022 tasks | completed HTML part | SCSS 6-11 left

--- a/TESTS/test-004.html
+++ b/TESTS/test-004.html
@@ -4,23 +4,94 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Denmark Corps</title>
+        <style>
+            /* HEAD CSS */
+            header{
+                background-color: rgb(148, 224, 218);
+                padding: 5px;
+            }
+            /* NAV CSS */
+            nav{
+                background-color: rgb(106, 241, 230);
+                padding: 5px;
+            }
+            /* SECTION 1 CSS */
+            #scn1{
+                background-color: rgb(199, 174, 174);
+                padding: 5px;
+            }
+            /* FOOT CSS */
+            footer{
+                background-color: rgb(63, 9, 9);
+                padding: 5px;
+                color: white;
+            }
+        </style>
     </head>
     <body>
+        <!-- H E A D E R |  -->
         <header>
-            <form method="get">
-                <label for="browser">Language: </label>
-                <input 
-                list="browsers"
-                id="browser" 
-                name="browser">
-                <datalist id="browsers">
-                  <option value="AZ">
-                  <option value="EN">
-                  <option value="RU">
-                </datalist>
-                <input type="submit">
-            </form>
+            <!-- 
+                Lang AZ-EN-RU-IT-FR-CH-SP
+            * BG IMG
+            Sign in -> test-004.html
+                Email box
+                Password box
+                    submit button
+                I forgot my password link -> test-004_ifmp.html | You shouldn't
+            Register -> test-004_register.html | add panels for sign up + go previous page link
+             -->
         </header>
+
+        <!-- N A V I G A T I O N |  -->
+        <nav>
+            <!-- only add search box -->
+        </nav>
+
+        <!-- S E C T I O N   1 -->
+        <section id="scn1">
+            <!-- 
+            h2 title
+            image for image map + use this map to a table html file about ADY homework or any
+            article about lorem + a link word to find some content on this page
+            iframe
+            more lorem + link to other html
+            -->
+        </section>
+
+        <!-- F O O T E R -->
+        <footer>
+            <span> <!-- about us part-->
+                <p>About us</p>
+                <p><a href="">Future Projects</a></p>
+                <p><a href="">Contact</a></p>
+                <p><a href="">Career</a></p>
+            </span>
+            <span> <!-- products part-->
+                <p>Products</p>
+                <p><a href="">Den(but-not)Mark</a></p>
+                <p><a href="">Den Browser</a></p>
+                <p><a href="">Denmark Kebab Restourant</a></p>
+                <p><a href="">Den VPN</a></p>
+            </span>
+            <span> <!-- more part-->
+                <p>More</p>
+                <p><a href="">Steam</a></p>
+                <p><a href="">Epic Games</a></p>
+                <p><a href="">YouTube</a></p>
+                <p><a href="">Twitter</a></p>
+                <p><a href="">Wikipedia</a></p>
+            </span>
+            <span> <!-- pp part-->
+                <p>Privacy Policy</p>
+                <!-- 
+                    test-004_pp.html -> We claim all information but we don't sell them, you can trust us.
+                    - evil smile png -
+                    Thank you for prefer Denmark Corps
+                    * BG IMG
+                 -->
+            </span>
+        </footer>
     </body>
 </html>
