--- a/Homework 12-24-2022/HW 008/hw_008.html
+++ b/Homework 12-24-2022/HW 008/hw_008.html
@@ -18,9 +18,9 @@
                     <ul>
                         <h1>Get In Touch</h1>
                         <li>the quick fox jumps over the lazy dog</li>
-                        <img src="/ASSETS/Icons/facebook.png" alt="fb">
-                        <img src="/ASSETS/Icons/instagram.png" alt="insta">
-                        <img src="/ASSETS/Icons/twitter.png" alt="twit">
+                        <img src="/ASSETS/Icons/facebook.png" alt="fb" width="25px">
+                        <img src="/ASSETS/Icons/instagram.png" alt="insta" width="25px">
+                        <img src="/ASSETS/Icons/twitter.png" alt="twit" width="25px">
                     </ul>
                     <ul>
                         <h1>Company info</h1>
