--- a/Homework 12-24-2022/HW 007/hw_007.html
+++ b/Homework 12-24-2022/HW 007/hw_007.html
@@ -28,78 +28,80 @@
     </div>
     <!-- BLOCK II -->
     <div id="block2">
-      <ul>
-        <h3>Company Info</h3>
-        <li>
-          <a href="#">About Us</a>
-        </li>
-        <li>
-          <a href="#">Carrier</a>
-        </li>
-        <li>
-          <a href="#">We are hiring</a>
-        </li>
-        <li>
-          <a href="#">Blog</a>
-        </li>
-      </ul>
-      <ul>
-        <h3>Legal</h3>
-        <li>
-          <a href="#">Lorem</a>
-        </li>
-        <li>
-          <a href="#">Ipsum</a>
-        </li>
-        <li>
-          <a href="#">Dolor</a>
-        </li>
-        <li>
-          <a href="#">Sit</a>
-        </li>
-      </ul>
-      <ul>
-        <h3>Features</h3>
-        <li>
-          <a href="#">Business Marketing</a>
-        </li>
-        <li>
-          <a href="#">User Analytic</a>
-        </li>
-        <li>
-          <a href="#">Live Chat</a>
-        </li>
-        <li>
-          <a href="#">Unlimited Support</a>
-        </li>
-      </ul>
-      <ul>
-        <h3>Resources</h3>
-        <li>
-          <a href="#">IOS & Android</a>
-        </li>
-        <li>
-          <a href="#">Watch a Demo</a>
-        </li>
-        <li>
-          <a href="#">Customers</a>
-        </li>
-        <li>
-          <a href="#">API</a>
-        </li>
-      </ul>
-      <ul>
-        <h3>Get In Touch</h3>
-        <li>
-            <img src="/ASSETS/Icons/whatsapp.png" alt="phone" width="25px">
-            (480) 555-0103</li>
-        <li>
-            <img src="/ASSETS/Icons/share.png" alt="location" width="25px">
-            4517 Washington Ave.</li>
-        <li>
-            <img src="/ASSETS/Icons/email.png" alt="mail" width="25px">
-            debra.holt@example.com</li>
-      </ul>
+      <span>
+        <ul>
+          <h3>Company Info</h3>
+          <li>
+            <a href="#">About Us</a>
+          </li>
+          <li>
+            <a href="#">Carrier</a>
+          </li>
+          <li>
+            <a href="#">We are hiring</a>
+          </li>
+          <li>
+            <a href="#">Blog</a>
+          </li>
+        </ul>
+        <ul>
+          <h3>Legal</h3>
+          <li>
+            <a href="#">Lorem</a>
+          </li>
+          <li>
+            <a href="#">Ipsum</a>
+          </li>
+          <li>
+            <a href="#">Dolor</a>
+          </li>
+          <li>
+            <a href="#">Sit</a>
+          </li>
+        </ul>
+        <ul>
+          <h3>Features</h3>
+          <li>
+            <a href="#">Business Marketing</a>
+          </li>
+          <li>
+            <a href="#">User Analytic</a>
+          </li>
+          <li>
+            <a href="#">Live Chat</a>
+          </li>
+          <li>
+            <a href="#">Unlimited Support</a>
+          </li>
+        </ul>
+        <ul>
+          <h3>Resources</h3>
+          <li>
+            <a href="#">IOS & Android</a>
+          </li>
+          <li>
+            <a href="#">Watch a Demo</a>
+          </li>
+          <li>
+            <a href="#">Customers</a>
+          </li>
+          <li>
+            <a href="#">API</a>
+          </li>
+        </ul>
+        <ul>
+          <h3>Get In Touch</h3>
+          <li>
+              <img src="/ASSETS/Icons/whatsapp.png" alt="phone" width="25px">
+              (480) 555-0103</li>
+          <li>
+              <img src="/ASSETS/Icons/share.png" alt="location" width="25px">
+              4517 Washington Ave.</li>
+          <li>
+              <img src="/ASSETS/Icons/email.png" alt="mail" width="25px">
+              debra.holt@example.com</li>
+        </ul>
+      </span>
     </div>
     <!-- BLOCK III -->
     <div id="block3">
