--- a/Homework 12-24-2022/HW 010/hw_010.html
+++ b/Homework 12-24-2022/HW 010/hw_010.html
@@ -16,15 +16,17 @@
                 <!-- FIRST BLOCK | SOCIAL MEDIA -->
                 <div id="social-media">
                     <h1>BrandName</h1>
-                    <a href="#">
-                        <img src="/ASSETS/Icons/facebook.png" alt="facebook" width="25px">
-                    </a>
-                    <a href="#">
-                        <img src="/ASSETS/Icons/instagram.png" alt="instagram" width="25px">
-                    </a>
-                    <a href="#">
-                        <img src="/ASSETS/Icons/twitter.png" alt="twitter" width="25px">
-                    </a>
+                    <span>
+                        <a href="#">
+                            <img src="/ASSETS/Icons/facebook.png" alt="facebook" width="25px">
+                        </a>
+                        <a href="#">
+                            <img src="/ASSETS/Icons/instagram.png" alt="instagram" width="25px">
+                        </a>
+                        <a href="#">
+                            <img src="/ASSETS/Icons/twitter.png" alt="twitter" width="25px">
+                        </a>
+                    </span>
                 </div>
                 <!-- SECOND BLOCK | LINKS -->
                 <div id="links">
@@ -93,7 +95,7 @@
                         </li>
                     </ul>
                     <!-- LIST | ROW 5 -->
-                    <ul>
+                    <ul id="form">
                         <h3>Get In Touch</h3>
                         <form action="#" method="post">
                             <input type="email" name="email" id="email" placeholder="Your Email">
