December 28, 2022 Homeworks completed @15:26 | 1-5/18

--- a/Homework 12-27-2022/hw_004.html
+++ b/Homework 12-27-2022/hw_004.html
@@ -15,10 +15,46 @@
     <link rel="stylesheet" href="./hw_004.css" />
   </head>
   <body>
-    <section>
+    <section id="products">
       <div class="cards">
-        <div class="cards__img cards__img--border"></div>
+        <img class="cards__img" src="/ASSETS/Products/product_01.jpg" alt="product-image_01">
+        <span class="cards__title cards_title--color">
+          <p class="cards__title--header">graphic design</p>
+          <p class="cards__title--describe">english department</p>
+          <br>
+          <span class="cards__title__product--price">
+            <strong class="cards__title__product--price__oldprice">$ 16.48</strong>
+            <b class="cards__title__product--price__newprice">$ 6.48</b>
+          </span>
+          <form class="cards__img--colors" action="#">
+            <input class="cards__img--colors__tblue" type="radio" id="tblue" name="color">
+            <input class="cards__img--colors__green" type="radio" id="green" name="color">
+            <input class="cards__img--colors__orange" type="radio" id="orange" name="color">
+            <input class="cards__img--colors__navy" type="radio" id="navy" name="color">
+          </form>
+        </span>
       </div>
+      <div class="cards">
+        <img class="cards__img" src="/ASSETS/Products/product_02.jpg" alt="product-image_02">
+        <span class="cards__title cards_title--color">
+          <p class="cards__title--header">graphic design</p>
+          <p class="cards__title--describe">english department</p>
+          <br>
+          <span class="cards__title__product--price">
+            <strong class="cards__title__product--price__oldprice">$ 16.48</strong>
+            <b class="cards__title__product--price__newprice">$ 6.48</b>
+          </span>
+          <form class="cards__img--colors" action="#">
+            <input class="cards__img--colors__tblue" type="radio" id="tblue" name="color">
+            <input class="cards__img--colors__green" type="radio" id="green" name="color">
+            <input class="cards__img--colors__orange" type="radio" id="orange" name="color">
+            <input class="cards__img--colors__navy" type="radio" id="navy" name="color">
+          </form>
+        </span>
+      </div>
+    </section>
+    <section class="bg-image">
+      <img src="/ASSETS/Images/img (5).png" alt="bg-image">
     </section>
   </body>
 </html>
