--- a/Homework 12-27-2022/hw_006.html
+++ b/Homework 12-27-2022/hw_006.html
@@ -15,10 +15,201 @@
     <link rel="stylesheet" href="./hw_006.css" />
   </head>
   <body>
-    <section>
-      <div class="cards">
-        <div class="cards__img cards__img--border"></div>
+    <section id="top">
+      <div class="top__text">
+        <p class="top__text__header">bestseller products</p>
+        <p class="top__text__describe">problems trying to solve the conflict between</p>
       </div>
+      <div class="buttons">
+        <button><a href="#">Men</a></button>
+        <button><a href="#">Women</a></button>
+        <button><a href="#">Accessories</a></button>
+      </div>
+    </section>
+    <section id="products">
+      <div class="cards">
+        <img class="cards__img" src="/ASSETS/Products/product_01.jpg" alt="product-image_01">
+        <span class="cards__title cards_title--color">
+          <p class="cards__title--header">graphic design</p>
+          <p class="cards__title--describe">english department</p>
+          <br>
+          <span class="cards__title__product--price">
+            <strong class="cards__title__product--price__oldprice">$ 16.48</strong>
+            <b class="cards__title__product--price__newprice">$ 6.48</b>
+          </span>
+          <form class="cards__img--colors" action="#">
+            <input class="cards__img--colors__tblue" type="radio" id="tblue" name="color">
+            <input class="cards__img--colors__green" type="radio" id="green" name="color">
+            <input class="cards__img--colors__orange" type="radio" id="orange" name="color">
+            <input class="cards__img--colors__navy" type="radio" id="navy" name="color">
+          </form>
+        </span>
+      </div>
+      <div class="cards">
+        <img class="cards__img" src="/ASSETS/Products/product_02.jpg" alt="product-image_02">
+        <span class="cards__title cards_title--color">
+          <p class="cards__title--header">graphic design</p>
+          <p class="cards__title--describe">english department</p>
+          <br>
+          <span class="cards__title__product--price">
+            <strong class="cards__title__product--price__oldprice">$ 16.48</strong>
+            <b class="cards__title__product--price__newprice">$ 6.48</b>
+          </span>
+          <form class="cards__img--colors" action="#">
+            <input class="cards__img--colors__tblue" type="radio" id="tblue" name="color">
+            <input class="cards__img--colors__green" type="radio" id="green" name="color">
+            <input class="cards__img--colors__orange" type="radio" id="orange" name="color">
+            <input class="cards__img--colors__navy" type="radio" id="navy" name="color">
+          </form>
+        </span>
+      </div>
+      <div class="cards">
+        <img class="cards__img" src="/ASSETS/Products/product_03.jpg" alt="product-image_03">
+        <span class="cards__title cards_title--color">
+          <p class="cards__title--header">graphic design</p>
+          <p class="cards__title--describe">english department</p>
+          <br>
+          <span class="cards__title__product--price">
+            <strong class="cards__title__product--price__oldprice">$ 16.48</strong>
+            <b class="cards__title__product--price__newprice">$ 6.48</b>
+          </span>
+          <form class="cards__img--colors" action="#">
+            <input class="cards__img--colors__tblue" type="radio" id="tblue" name="color">
+            <input class="cards__img--colors__green" type="radio" id="green" name="color">
+            <input class="cards__img--colors__orange" type="radio" id="orange" name="color">
+            <input class="cards__img--colors__navy" type="radio" id="navy" name="color">
+          </form>
+        </span>
+      </div>
+      <div class="cards">
+        <img class="cards__img" src="/ASSETS/Products/product_04.jpg" alt="product-image_04">
+        <span class="cards__title cards_title--color">
+          <p class="cards__title--header">graphic design</p>
+          <p class="cards__title--describe">english department</p>
+          <br>
+          <span class="cards__title__product--price">
+            <strong class="cards__title__product--price__oldprice">$ 16.48</strong>
+            <b class="cards__title__product--price__newprice">$ 6.48</b>
+          </span>
+          <form class="cards__img--colors" action="#">
+            <input class="cards__img--colors__tblue" type="radio" id="tblue" name="color">
+            <input class="cards__img--colors__green" type="radio" id="green" name="color">
+            <input class="cards__img--colors__orange" type="radio" id="orange" name="color">
+            <input class="cards__img--colors__navy" type="radio" id="navy" name="color">
+          </form>
+        </span>
+      </div>
+      <div class="cards">
+        <img class="cards__img" src="/ASSETS/Products/product_05.jpg" alt="product-image_05">
+        <span class="cards__title cards_title--color">
+          <p class="cards__title--header">graphic design</p>
+          <p class="cards__title--describe">english department</p>
+          <br>
+          <span class="cards__title__product--price">
+            <strong class="cards__title__product--price__oldprice">$ 16.48</strong>
+            <b class="cards__title__product--price__newprice">$ 6.48</b>
+          </span>
+          <form class="cards__img--colors" action="#">
+            <input class="cards__img--colors__tblue" type="radio" id="tblue" name="color">
+            <input class="cards__img--colors__green" type="radio" id="green" name="color">
+            <input class="cards__img--colors__orange" type="radio" id="orange" name="color">
+            <input class="cards__img--colors__navy" type="radio" id="navy" name="color">
+          </form>
+        </span>
+      </div>
+      <div class="cards">
+        <img class="cards__img" src="/ASSETS/Products/product_06.jpg" alt="product-image_06">
+        <span class="cards__title cards_title--color">
+          <p class="cards__title--header">graphic design</p>
+          <p class="cards__title--describe">english department</p>
+          <br>
+          <span class="cards__title__product--price">
+            <strong class="cards__title__product--price__oldprice">$ 16.48</strong>
+            <b class="cards__title__product--price__newprice">$ 6.48</b>
+          </span>
+          <form class="cards__img--colors" action="#">
+            <input class="cards__img--colors__tblue" type="radio" id="tblue" name="color">
+            <input class="cards__img--colors__green" type="radio" id="green" name="color">
+            <input class="cards__img--colors__orange" type="radio" id="orange" name="color">
+            <input class="cards__img--colors__navy" type="radio" id="navy" name="color">
+          </form>
+        </span>
+      </div>
+      <div class="cards">
+        <img class="cards__img" src="/ASSETS/Products/product_07.jpg" alt="product-image_07">
+        <span class="cards__title cards_title--color">
+          <p class="cards__title--header">graphic design</p>
+          <p class="cards__title--describe">english department</p>
+          <br>
+          <span class="cards__title__product--price">
+            <strong class="cards__title__product--price__oldprice">$ 16.48</strong>
+            <b class="cards__title__product--price__newprice">$ 6.48</b>
+          </span>
+          <form class="cards__img--colors" action="#">
+            <input class="cards__img--colors__tblue" type="radio" id="tblue" name="color">
+            <input class="cards__img--colors__green" type="radio" id="green" name="color">
+            <input class="cards__img--colors__orange" type="radio" id="orange" name="color">
+            <input class="cards__img--colors__navy" type="radio" id="navy" name="color">
+          </form>
+        </span>
+      </div>
+      <div class="cards">
+        <img class="cards__img" src="/ASSETS/Products/product_08.jpg" alt="product-image_08">
+        <span class="cards__title cards_title--color">
+          <p class="cards__title--header">graphic design</p>
+          <p class="cards__title--describe">english department</p>
+          <br>
+          <span class="cards__title__product--price">
+            <strong class="cards__title__product--price__oldprice">$ 16.48</strong>
+            <b class="cards__title__product--price__newprice">$ 6.48</b>
+          </span>
+          <form class="cards__img--colors" action="#">
+            <input class="cards__img--colors__tblue" type="radio" id="tblue" name="color">
+            <input class="cards__img--colors__green" type="radio" id="green" name="color">
+            <input class="cards__img--colors__orange" type="radio" id="orange" name="color">
+            <input class="cards__img--colors__navy" type="radio" id="navy" name="color">
+          </form>
+        </span>
+      </div>
+      <div class="cards">
+        <img class="cards__img" src="/ASSETS/Products/product_10.jpg" alt="product-image_10">
+        <span class="cards__title cards_title--color">
+          <p class="cards__title--header">graphic design</p>
+          <p class="cards__title--describe">english department</p>
+          <br>
+          <span class="cards__title__product--price">
+            <strong class="cards__title__product--price__oldprice">$ 16.48</strong>
+            <b class="cards__title__product--price__newprice">$ 6.48</b>
+          </span>
+          <form class="cards__img--colors" action="#">
+            <input class="cards__img--colors__tblue" type="radio" id="tblue" name="color">
+            <input class="cards__img--colors__green" type="radio" id="green" name="color">
+            <input class="cards__img--colors__orange" type="radio" id="orange" name="color">
+            <input class="cards__img--colors__navy" type="radio" id="navy" name="color">
+          </form>
+        </span>
+      </div>
+      <div class="cards">
+        <img class="cards__img" src="/ASSETS/Products/product_11.jpg" alt="product-image_11">
+        <span class="cards__title cards_title--color">
+          <p class="cards__title--header">graphic design</p>
+          <p class="cards__title--describe">english department</p>
+          <br>
+          <span class="cards__title__product--price">
+            <strong class="cards__title__product--price__oldprice">$ 16.48</strong>
+            <b class="cards__title__product--price__newprice">$ 6.48</b>
+          </span>
+          <form class="cards__img--colors" action="#">
+            <input class="cards__img--colors__tblue" type="radio" id="tblue" name="color">
+            <input class="cards__img--colors__green" type="radio" id="green" name="color">
+            <input class="cards__img--colors__orange" type="radio" id="orange" name="color">
+            <input class="cards__img--colors__navy" type="radio" id="navy" name="color">
+          </form>
+        </span>
+      </div>
+    </section>
+    <section id="lmp">
+      <button><a href="#">LOAD MORE PRODUCTS</a></button>
     </section>
   </body>
 </html>
