added new files - Figma E-commerce products

--- a/FIGMA E-commerce/Products/product_04.html
+++ b/FIGMA E-commerce/Products/product_04.html
@@ -16,7 +16,248 @@
     </head>
     <body>
         <section>
-            <div></div>
+            <div class="poster">
+                <img src="/ASSETS/Images/metro-exodus-artyom-hd-wallpaper-preview.jpg" alt="poster">
+            </div>
+            <div class="container">
+                <div class="container__top">
+                    <p class="container__top-paragraph">Featured Products</p>
+                    <h1 class="container__top-header">Featured Products</h1>
+                    <p class="container__top-description">Problems trying to resolve the conflict between the two major realms 
+                    of Classical physics: Newtonian mechanics</p>
+                </div>
+                <div class="container__cards">
+                    <div class="container__cards__card__no1">
+                        <!-- image -->
+                        <div>
+                            <img class="container__cards__card__no1-img" src="/ASSETS/Products/product_04.jpg" alt="image1">
+                            <div class="container__cards__card__no1-img_button1">Sale</div>
+                        </div>
+                        <!-- buttons -->
+                        <div class="container__cards__card__no1-img_button2">
+                            <i class="fa-regular fa-heart fa-3x fa-imgButtons"></i>
+                            <i class="fa-solid fa-cart-arrow-down fa-3x fa-imgButtons"></i>
+                            <i class="fa-solid fa-eye fa-3x fa-imgButtons"></i>
+                        </div>
+                        <div class="container__cards__card__no1-pnl">
+                            <!-- language -->
+                            <p class="container__cards__card__no1-pnl-lang">English</p>
+                            <!-- rating -->
+                            <p class="container__cards__card__no1-pnl-rating">
+                                <i class="fa-solid fa-star fa-1x"></i>
+                                4.9</p>
+                        </div>
+                        <!-- product name -->
+                        <h5 class="container__cards__card__no1-name additionalMargin">Graphic Design</h5>
+                        <!-- description -->
+                        <p class="container__cards__card__no1-descr additionalMargin">We focus on ergonomics and meeting you...</p>
+                        <!-- sales count -->
+                        <p class="container__cards__card__no1-sales additionalMargin">
+                            <i class="fa-solid fa-cart-arrow-down fa-1x"></i>
+                            15 Sales</p>
+                        <!-- price old del & new strong -->
+                        <span class="container__cards__card__no1-price additionalMargin">
+                            <del class="container__cards__card__no1-price-old">$16.48</del>
+                            <strong class="container__cards__card__no1-price-new">$6.48</strong>
+                        </span>
+                        <!-- color select button focus -->
+                        <div class="container__cards__card__no1-colorSelect additionalMargin">
+                            <div class="container__cards__card__no1-colorSelect-tb"></div>
+                            <div class="container__cards__card__no1-colorSelect-gr"></div>
+                            <div class="container__cards__card__no1-colorSelect-or"></div>
+                            <div class="container__cards__card__no1-colorSelect-na"></div>
+                        </div>
+                        <!-- some data with icons -->
+                        <div class="container__cards__card__no1-someData">
+                            <div><i class="fa-regular fa-clock fa-1x"></i>Pro...</div>
+                            <div><i class="fa-solid fa-chart-column fa-1x"></i>64 Les...</div>
+                            <div><i class="fa-regular fa-clock fa-1x"></i>22hr..</div>
+                        </div>
+                        <!-- learn more -->
+                        <button class="container__cards__card__no1-learnMore additionalMargin">
+                            <a href="#">
+                                Learn More
+                                <i class="fa-solid fa-chevron-right fa-2x"></i>
+                            </a>
+                        </button>
+                    </div>
+                    <div class="container__cards__card__no1">
+                        <!-- image -->
+                        <div>
+                            <img class="container__cards__card__no1-img" src="/ASSETS/Products/product_01.jpg" alt="image2">
+                            <div class="container__cards__card__no1-img_button1">Sale</div>
+                        </div>
+                        <!-- buttons -->
+                        <div class="container__cards__card__no1-img_button2">
+                            <i class="fa-regular fa-heart fa-3x fa-imgButtons"></i>
+                            <i class="fa-solid fa-cart-arrow-down fa-3x fa-imgButtons"></i>
+                            <i class="fa-solid fa-eye fa-3x fa-imgButtons"></i>
+                        </div>
+                        <div class="container__cards__card__no1-pnl">
+                            <!-- language -->
+                            <p class="container__cards__card__no1-pnl-lang">English</p>
+                            <!-- rating -->
+                            <p class="container__cards__card__no1-pnl-rating">
+                                <i class="fa-solid fa-star fa-1x"></i>
+                                4.9</p>
+                        </div>
+                        <!-- product name -->
+                        <h5 class="container__cards__card__no1-name additionalMargin">Graphic Design</h5>
+                        <!-- description -->
+                        <p class="container__cards__card__no1-descr additionalMargin">We focus on ergonomics and meeting you...</p>
+                        <!-- sales count -->
+                        <p class="container__cards__card__no1-sales additionalMargin">
+                            <i class="fa-solid fa-cart-arrow-down fa-1x"></i>
+                            15 Sales</p>
+                        <!-- price old del & new strong -->
+                        <span class="container__cards__card__no1-price additionalMargin">
+                            <del class="container__cards__card__no1-price-old">$16.48</del>
+                            <strong class="container__cards__card__no1-price-new">$6.48</strong>
+                        </span>
+                        <!-- color select button focus -->
+                        <div class="container__cards__card__no1-colorSelect additionalMargin">
+                            <div class="container__cards__card__no1-colorSelect-tb"></div>
+                            <div class="container__cards__card__no1-colorSelect-gr"></div>
+                            <div class="container__cards__card__no1-colorSelect-or"></div>
+                            <div class="container__cards__card__no1-colorSelect-na"></div>
+                        </div>
+                        <!-- some data with icons -->
+                        <div class="container__cards__card__no1-someData">
+                            <div><i class="fa-regular fa-clock fa-1x"></i>Pro...</div>
+                            <div><i class="fa-solid fa-chart-column fa-1x"></i>64 Les...</div>
+                            <div><i class="fa-regular fa-clock fa-1x"></i>22hr..</div>
+                        </div>
+                        <!-- learn more -->
+                        <button class="container__cards__card__no1-learnMore additionalMargin">
+                            <a href="#">
+                                Learn More
+                                <i class="fa-solid fa-chevron-right fa-2x"></i>
+                            </a>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="container__top">
+                    <p class="container__top-paragraph">Featured Products</p>
+                    <h1 class="container__top-header">Featured Products</h1>
+                    <p class="container__top-description">Problems trying to resolve the conflict between the two major realms 
+                    of Classical physics: Newtonian mechanics</p>
+                </div>
+                <div class="container__cards">
+                    <div class="container__cards__card__no1">
+                        <!-- image -->
+                        <div>
+                            <img class="container__cards__card__no1-img" src="/ASSETS/Products/product_11.jpg" alt="image1">
+                            <div class="container__cards__card__no1-img_button1">Sale</div>
+                        </div>
+                        <!-- buttons -->
+                        <div class="container__cards__card__no1-img_button2">
+                            <i class="fa-regular fa-heart fa-3x fa-imgButtons"></i>
+                            <i class="fa-solid fa-cart-arrow-down fa-3x fa-imgButtons"></i>
+                            <i class="fa-solid fa-eye fa-3x fa-imgButtons"></i>
+                        </div>
+                        <div class="container__cards__card__no1-pnl">
+                            <!-- language -->
+                            <p class="container__cards__card__no1-pnl-lang">English</p>
+                            <!-- rating -->
+                            <p class="container__cards__card__no1-pnl-rating">
+                                <i class="fa-solid fa-star fa-1x"></i>
+                                4.9</p>
+                        </div>
+                        <!-- product name -->
+                        <h5 class="container__cards__card__no1-name additionalMargin">Graphic Design</h5>
+                        <!-- description -->
+                        <p class="container__cards__card__no1-descr additionalMargin">We focus on ergonomics and meeting you...</p>
+                        <!-- sales count -->
+                        <p class="container__cards__card__no1-sales additionalMargin">
+                            <i class="fa-solid fa-cart-arrow-down fa-1x"></i>
+                            15 Sales</p>
+                        <!-- price old del & new strong -->
+                        <span class="container__cards__card__no1-price additionalMargin">
+                            <del class="container__cards__card__no1-price-old">$16.48</del>
+                            <strong class="container__cards__card__no1-price-new">$6.48</strong>
+                        </span>
+                        <!-- color select button focus -->
+                        <div class="container__cards__card__no1-colorSelect additionalMargin">
+                            <div class="container__cards__card__no1-colorSelect-tb"></div>
+                            <div class="container__cards__card__no1-colorSelect-gr"></div>
+                            <div class="container__cards__card__no1-colorSelect-or"></div>
+                            <div class="container__cards__card__no1-colorSelect-na"></div>
+                        </div>
+                        <!-- some data with icons -->
+                        <div class="container__cards__card__no1-someData">
+                            <div><i class="fa-regular fa-clock fa-1x"></i>Pro...</div>
+                            <div><i class="fa-solid fa-chart-column fa-1x"></i>64 Les...</div>
+                            <div><i class="fa-regular fa-clock fa-1x"></i>22hr..</div>
+                        </div>
+                        <!-- learn more -->
+                        <button class="container__cards__card__no1-learnMore additionalMargin">
+                            <a href="#">
+                                Learn More
+                                <i class="fa-solid fa-chevron-right fa-2x"></i>
+                            </a>
+                        </button>
+                    </div>
+                    <div class="container__cards__card__no1">
+                        <!-- image -->
+                        <div>
+                            <img class="container__cards__card__no1-img" src="/ASSETS/Products/product_05.jpg" alt="image2">
+                            <div class="container__cards__card__no1-img_button1">Sale</div>
+                        </div>
+                        <!-- buttons -->
+                        <div class="container__cards__card__no1-img_button2">
+                            <i class="fa-regular fa-heart fa-3x fa-imgButtons"></i>
+                            <i class="fa-solid fa-cart-arrow-down fa-3x fa-imgButtons"></i>
+                            <i class="fa-solid fa-eye fa-3x fa-imgButtons"></i>
+                        </div>
+                        <div class="container__cards__card__no1-pnl">
+                            <!-- language -->
+                            <p class="container__cards__card__no1-pnl-lang">English</p>
+                            <!-- rating -->
+                            <p class="container__cards__card__no1-pnl-rating">
+                                <i class="fa-solid fa-star fa-1x"></i>
+                                4.9</p>
+                        </div>
+                        <!-- product name -->
+                        <h5 class="container__cards__card__no1-name additionalMargin">Graphic Design</h5>
+                        <!-- description -->
+                        <p class="container__cards__card__no1-descr additionalMargin">We focus on ergonomics and meeting you...</p>
+                        <!-- sales count -->
+                        <p class="container__cards__card__no1-sales additionalMargin">
+                            <i class="fa-solid fa-cart-arrow-down fa-1x"></i>
+                            15 Sales</p>
+                        <!-- price old del & new strong -->
+                        <span class="container__cards__card__no1-price additionalMargin">
+                            <del class="container__cards__card__no1-price-old">$16.48</del>
+                            <strong class="container__cards__card__no1-price-new">$6.48</strong>
+                        </span>
+                        <!-- color select button focus -->
+                        <div class="container__cards__card__no1-colorSelect additionalMargin">
+                            <div class="container__cards__card__no1-colorSelect-tb"></div>
+                            <div class="container__cards__card__no1-colorSelect-gr"></div>
+                            <div class="container__cards__card__no1-colorSelect-or"></div>
+                            <div class="container__cards__card__no1-colorSelect-na"></div>
+                        </div>
+                        <!-- some data with icons -->
+                        <div class="container__cards__card__no1-someData">
+                            <div><i class="fa-regular fa-clock fa-1x"></i>Pro...</div>
+                            <div><i class="fa-solid fa-chart-column fa-1x"></i>64 Les...</div>
+                            <div><i class="fa-regular fa-clock fa-1x"></i>22hr..</div>
+                        </div>
+                        <!-- learn more -->
+                        <button class="container__cards__card__no1-learnMore additionalMargin">
+                            <a href="#">
+                                Learn More
+                                <i class="fa-solid fa-chevron-right fa-2x"></i>
+                            </a>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="poster">
+                <img src="/ASSETS/Images/HD-New-york-city-street-wallpaper.jpg" alt="poster">
+            </div>
         </section>
     </body>
 </html>
