--- a/FIGMA E-commerce/Products/product_05.html
+++ b/FIGMA E-commerce/Products/product_05.html
@@ -16,7 +16,95 @@
     </head>
     <body>
         <section>
-            <div></div>
+            <i class="fa-solid fa-circle-chevron-left fa-1x"></i>
+            <i class="fa-solid fa-circle-chevron-right fa-1x"></i>
+            <div class="text">
+                <h1 class="text__header">RELATED PRODUCTS</h1>
+                <p class="text__description">Problems trying to resolve the conflict between ...</p>
+            </div>
+            <div class="container">
+                <div class="container__card">
+                    <div class="container__card-upper">
+                        <img src="/ASSETS/Products/product_04.jpg" alt="img1of3">
+                        <button>Sale</button>
+                    </div>
+                    <div class="container__card-lower">
+                        <h3 class="container__card-lower_header">Hands Women's Jersey Full Zip Hoodie</h3>
+                        <div class="container__card-lower_reviews">
+                            <i class="fa-solid fa-star fa-1x"></i>
+                            <i class="fa-solid fa-star fa-1x"></i>
+                            <i class="fa-solid fa-star fa-1x"></i>
+                            <i class="fa-regular fa-star-half-stroke fa-1x"></i>
+                            <i class="fa-regular fa-star fa-1x"></i>
+                            <p>10 Reviews</p>
+                        </div>
+                        <div class="container__card-lower_price">
+                            <del>$16.48</del>
+                            <strong>$6.48</strong>
+                        </div>
+                        <div class="container__card-lower_colorSelect">
+                            <div class="container__card-lower_colorSelect-tblue"></div>
+                            <div class="container__card-lower_colorSelect-green"></div>
+                            <div class="container__card-lower_colorSelect-orange"></div>
+                            <div class="container__card-lower_colorSelect-navy"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="container__card">
+                    <div class="container__card-upper">
+                        <img src="/ASSETS/Products/product_01.jpg" alt="img2of3">
+                        <button>Sale</button>
+                    </div>
+                    <div class="container__card-lower">
+                        <h3 class="container__card-lower_header">Hands Women's Jersey Full Zip Hoodie</h3>
+                        <div class="container__card-lower_reviews">
+                            <i class="fa-solid fa-star fa-1x"></i>
+                            <i class="fa-solid fa-star fa-1x"></i>
+                            <i class="fa-solid fa-star fa-1x"></i>
+                            <i class="fa-regular fa-star-half-stroke fa-1x"></i>
+                            <i class="fa-regular fa-star fa-1x"></i>
+                            <p>10 Reviews</p>
+                        </div>
+                        <div class="container__card-lower_price">
+                            <del>$16.48</del>
+                            <strong>$6.48</strong>
+                        </div>
+                        <div class="container__card-lower_colorSelect">
+                            <div class="container__card-lower_colorSelect-tblue"></div>
+                            <div class="container__card-lower_colorSelect-green"></div>
+                            <div class="container__card-lower_colorSelect-orange"></div>
+                            <div class="container__card-lower_colorSelect-navy"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="container__card">
+                    <div class="container__card-upper">
+                        <img src="/ASSETS/Products/product_06.jpg" alt="img3of3">
+                        <button>Sale</button>
+                    </div>
+                    <div class="container__card-lower">
+                        <h3 class="container__card-lower_header">Hands Women's Jersey Full Zip Hoodie</h3>
+                        <div class="container__card-lower_reviews">
+                            <i class="fa-solid fa-star fa-1x"></i>
+                            <i class="fa-solid fa-star fa-1x"></i>
+                            <i class="fa-solid fa-star fa-1x"></i>
+                            <i class="fa-regular fa-star-half-stroke fa-1x"></i>
+                            <i class="fa-regular fa-star fa-1x"></i>
+                            <p>10 Reviews</p>
+                        </div>
+                        <div class="container__card-lower_price">
+                            <del>$16.48</del>
+                            <strong>$6.48</strong>
+                        </div>
+                        <div class="container__card-lower_colorSelect">
+                            <div class="container__card-lower_colorSelect-tblue"></div>
+                            <div class="container__card-lower_colorSelect-green"></div>
+                            <div class="container__card-lower_colorSelect-orange"></div>
+                            <div class="container__card-lower_colorSelect-navy"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </body>
 </html>
