--- a/index.html
+++ b/index.html
@@ -25,6 +25,63 @@
                 <button class="index__button">
                     <a href="/FIGMA E-commerce/Products/product_05.html">Product 05</a>
                 </button>
+                <button class="index__button">
+                    <a href="#">EMPTY SLOT</a>
+                </button>
+                <button class="index__button">
+                    <a href="#">EMPTY SLOT</a>
+                </button>
+                <button class="index__button">
+                    <a href="#">EMPTY SLOT</a>
+                </button>
+                <button class="index__button">
+                    <a href="#">EMPTY SLOT</a>
+                </button>
+                <button class="index__button">
+                    <a href="#">EMPTY SLOT</a>
+                </button>
+                <button class="index__button">
+                    <a href="#">EMPTY SLOT</a>
+                </button>
+                <button class="index__button">
+                    <a href="#">EMPTY SLOT</a>
+                </button>
+                <button class="index__button">
+                    <a href="#">EMPTY SLOT</a>
+                </button>
+                <button class="index__button">
+                    <a href="#">EMPTY SLOT</a>
+                </button>
+                <button class="index__button">
+                    <a href="#">EMPTY SLOT</a>
+                </button>
+                <button class="index__button">
+                    <a href="#">EMPTY SLOT</a>
+                </button>
+                <button class="index__button">
+                    <a href="#">EMPTY SLOT</a>
+                </button>
+                <button class="index__button">
+                    <a href="#">EMPTY SLOT</a>
+                </button>
+                <button class="index__button">
+                    <a href="#">EMPTY SLOT</a>
+                </button>
+                <button class="index__button">
+                    <a href="#">EMPTY SLOT</a>
+                </button>
+                <button class="index__button">
+                    <a href="#">EMPTY SLOT</a>
+                </button>
+                <button class="index__button">
+                    <a href="#">EMPTY SLOT</a>
+                </button>
+                <button class="index__button">
+                    <a href="#">EMPTY SLOT</a>
+                </button>
+                <button class="index__button">
+                    <a href="#">EMPTY SLOT</a>
+                </button>
             </div>
         </section>
     </body>
