update for E-commerce added filter.html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <a href="/FIGMA E-commerce/Components/dropdown.html">E-commerce dropdownMenu</a>
                 </button>
                 <button class="index__button">
-                    <a href="#">EMPTY SLOT</a>
+                    <a href="/FIGMA E-commerce/Components/filters.html">E-commerce filters</a>
                 </button>
                 <button class="index__button">
                     <a href="#">EMPTY SLOT</a>
