update for selhome demo

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <a href="/FIGMA E-commerce/Components/filters.html">E-commerce filters</a>
                 </button>
                 <button class="index__button">
-                    <a href="#">EMPTY SLOT</a>
+                    <a href="/PROJECT-copyPaste/sellhome.html">SELHOME DEMO</a>
                 </button>
                 <button class="index__button">
                     <a href="#">EMPTY SLOT</a>
