add some new files for FIGMA E-commerce / Components

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
                     <a href="/PROJECT-copyPaste/sellhome.html">SELHOME DEMO</a>
                 </button>
                 <button class="index__button">
-                    <a href="#">EMPTY SLOT</a>
+                    <a href="/FIGMA E-commerce/Components/accordion.html">Components Accordion</a>
                 </button>
                 <button class="index__button">
-                    <a href="#">EMPTY SLOT</a>
+                    <a href="/FIGMA E-commerce/Components/buttonMd.html">Components Buttons</a>
                 </button>
                 <button class="index__button">
-                    <a href="#">EMPTY SLOT</a>
+                    <a href="/FIGMA E-commerce/Components/buttonStore.html">Components storeButtons</a>
                 </button>
                 <button class="index__button">
                     <a href="#">EMPTY SLOT</a>
