item style 6 html added to E-Commerce Components

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <a href="/FIGMA E-commerce/Components/buttonStore.html">Components storeButtons</a>
                 </button>
                 <button class="index__button">
-                    <a href="#">EMPTY SLOT</a>
+                    <a href="/FIGMA E-commerce/Components/card_itemStyle-6.html">Components ItemStyle6</a>
                 </button>
                 <button class="index__button">
                     <a href="#">EMPTY SLOT</a>
