January 3, 2023 | completed E-commerce Components

--- a/PROJECT-copyPaste/sellhome.html
+++ b/PROJECT-copyPaste/sellhome.html
@@ -122,7 +122,7 @@
             <section id="navbar"> <!-- NAVIGATION BAR-->
                 <img src="/PROJECT-copyPaste/selhome logo.png" alt="logo">
                 <form method="get">
-                    <input type="text" id="searchbar" name="searchbar" placeholder="1 məhsul üzərindən axtarış">
+                    <input type="search" id="searchbar" name="searchbar" placeholder="1 məhsul üzərindən axtarış">
                     <input type="submit" value=" ">
                     <i id="magnifier" class="fa-solid fa-magnifying-glass fa-1x"></i>
                 </form>
