--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <a href="#">EMPTY SLOT</a>
                 </button>
                 <button class="index__button">
-                    <a href="#">EMPTY SLOT</a>
+                    <a href="/">ROOT FOLDER TEST</a>
                 </button>
             </div>
         </section>
