Remaking Interface (index.html) file for Vercel & GitHub - work in progress

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <a href="#">EMPTY SLOT</a>
                 </button>
                 <button class="index__button">
-                    <a href="/">ROOT FOLDER TEST</a>
+                    <a href="/TESTS/index.html">NEW INTERFACE (work in progress)</a>
                 </button>
             </div>
         </section>
